Laatste twee kunstwerken toegevoegd

--- a/Painting2.html
+++ b/Painting2.html
@@ -16,6 +16,7 @@
     <div id="mainContainer">
         <div id="navigation">
             <a href="index.html"> Home</a>
+            <a href="Painting1.html" > Stuk 1</a>
             <a href="Painting2.html"> Stuk 2</a>
             <a href="Painting3.html"> Stuk 3</a>
             <a href="Painting4.html"> Stuk 4</a>
@@ -23,13 +24,13 @@
         <div id="introcontainer">
             <H1>Models</H1>
             <h2> Over het kunstwerk</h2>
-            <p> Het werk models, gemaakt door de zuid-afrikaanse Marlene Dumas, bestaat uit honderden portet
+            <p id="Introtext"> Het werk models, gemaakt door de zuid-afrikaanse Marlene Dumas, bestaat uit honderden portet
                 tekening van vrouwenhoofden. Tussen die honderd protretten zit een ander soort portret.
                 Het hoofd van een slang, deze staat symbool voor verleiding voor vrouwen. </p>
             <h2> Wie het heeft gemaakt </h2>
-            <p> De maker van dit kunstwerk heet Marlene Dumas</p>
+            <p id="Introtext"> De maker van dit kunstwerk heet Marlene Dumas</p>
             <h2> Waarom dit bij mij past</h2>
-            <p> Ik houd van vrouwen en ik vind reptielen erg leuk</p>
+            <p id="Introtext"> Ik houd van vrouwen en ik vind reptielen erg leuk</p>
         </div>
 
         <img src="Img/Vrouwen.jpg" id="Vrouw">
