--- a/Painting3.html
+++ b/Painting3.html
@@ -16,6 +16,7 @@
     <div id="mainContainer">
         <div id="navigation">
             <a href="index.html"> Home</a>
+            <a href="Painting1.html" > Stuk 1</a>
             <a href="Painting2.html"> Stuk 2</a>
             <a href="Painting3.html"> Stuk 3</a>
             <a href="Painting4.html"> Stuk 4</a>
@@ -23,16 +24,16 @@
         <div id="introcontainer">
             <H1>This Means Tableau</H1>
             <h2> Over het kunstwerk</h2>
-            <p> In an attempt to rediscover the basics of human connection in these isolated times, Laure Prouvost has
+            <p id="Introtext"> In an attempt to rediscover the basics of human connection in these isolated times, Laure Prouvost has
                 developed a new ideographic language, to promote the un-learning of language, the re-learning of words
                 and the de-learning of previously associated meanings.</p>
             <h2> Wie het heeft gemaakt </h2>
-            <p> De maker van dit kunstwerk heet Loure Prouvost</p>
+            <p id="Introtext"> De maker van dit kunstwerk heet Loure Prouvost</p>
             <h2> Waarom dit bij mij past</h2>
-            <p> Ik vind chinese cultuur heel mooi en leer hier veel over in mijn vrije tijd.</p>
+            <p id="Introtext"> Ik ben zelf natuurlijk ook een goat (Greatest of all time) als je dit niet vind..... dan ga ik huilen</p>
         </div>
 
-        <img src="Img/Painting 1.jpg" id="Draak">
+        <img src="Img/Goated.jpg" id="Goat">
     </div>
 </body>
 
