--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="mainContainer">
         <div id="navigation">
             <a href="index.html" > Home</a>
+            <a href="Painting1.html" > Stuk 1</a>
             <a href="Painting2.html" > Stuk 2</a>
             <a href="Painting3.html" > Stuk 3</a>
             <a href="Painting4.html" > Stuk 4</a>
