--- a/Painting1.html
+++ b/Painting1.html
@@ -15,6 +15,7 @@
     <div id="mainContainer">
     <div id="navigation">
         <a href="index.html"> Home</a>
+        <a href="Painting1.html" > Stuk 1</a>
         <a href="Painting2.html"> Stuk 2</a>
         <a href="Painting3.html"> Stuk 3</a>
         <a href="Painting4.html"> Stuk 4</a>
@@ -22,15 +23,15 @@
         <div id="introcontainer">
             <H1>The thunderstorm is slowly approaching</H1>
             <h2> Over het kunstwerk</h2>
-            <p> In Chinese tradition, dragon dances were held in early spring to invite the rains and bring prosperity
-                and a good harvest. Qiu Zhijie’s work centers on a camouflage-pattern dragon costume hung alongside a
+            <p id="Introtext"> In Chinese tradition, dragon dances were held in early spring to invite the rains and bring prosperity
+                and a good harvest. Qiu Zhijie's work centers on a camouflage-pattern dragon costume hung alongside a
                 camouflage-pattern painting. Ten people take the costume and perform a ceremonial dance that ends with
                 the return of the dragon to its original position before the painting, thereby completing the cycle of
-                hiding, unveiling and hiding again></p>
+                hiding, unveiling and hiding again</p>
             <h2> Wie het heeft gemaakt </h2>
-            <p> De maker van dit kunstwerk heet Qiu Zhijie></p>
+            <p id="Introtext"> De maker van dit kunstwerk heet Qiu Zhijie></p>
             <h2> Waarom dit bij mij past</h2>
-            <p> Ik vind chinese cultuur heel mooi en leer hier veel over in mijn vrije tijd.</p>
+            <p id="Introtext"> Ik vind chinese cultuur heel mooi en leer hier veel over in mijn vrije tijd.</p>
         </div>
 
         <img src="Img/Painting 1.jpg" id="Draak">
