--- a/Painting4.html
+++ b/Painting4.html
@@ -15,30 +15,30 @@
 <body>
     <div id="mainContainer">
         <div id="navigation">
-            <a href="index.html" target=_blank> Home</a>
-            <a href="Painting2.html" target="_blank"> Stuk 2</a>
-            <a href="Painting3.html" target=_blank> Stuk 3</a>
-            <a href="Painting4.html" target=_blank> Stuk 4</a>
+            <a href="index.html"> Home</a>
+            <a href="Painting1.html"> Stuk 1</a>
+            <a href="Painting2.html"> Stuk 2</a>
+            <a href="Painting3.html"> Stuk 3</a>
+            <a href="Painting4.html"> Stuk 4</a>
         </div>
         <div id="introcontainer">
             <H1>The thunderstorm is slowly approaching</H1>
             <h2> Over het kunstwerk</h2>
-            <p> In Chinese tradition, dragon dances were held in early spring to invite the rains and bring
-                prosperity
-                and a good harvest. Qiu Zhijie’s work centers on a camouflage-pattern dragon costume hung alongside
-                a
-                camouflage-pattern painting. Ten people take the costume and perform a ceremonial dance that ends
-                with
-                the return of the dragon to its original position before the painting, thereby completing the cycle
-                of
-                hiding, unveiling and hiding again></p>
+            <p id="Introtext"> Perjovschi's drawings have been widely disseminated-from the walls of museums to the pages of
+                newspapers. Since 1990, following the demise of Communism in Eastern Europe and the dismantling of the
+                Berlin Wall, the artist has contributed hundreds of witty and incisive observations to literary and
+                political journals, such as Contrapunct and 22. The latter was the first independent oppositional weekly
+                published in Romania in the aftermath of the Democratic Revolution. Taking its name from the date
+                December 22, 1989, the historic day on which Romanian dictator Nicolae Ceausescu was ousted from power,
+                22 is the brainchild of the Group of Social Dialogue, a think tank of dissident writers, artists, and
+                philosophers who endorse freedom of expression and human rights. </p>
             <h2> Wie het heeft gemaakt </h2>
-            <p> De maker van dit kunstwerk heet Qiu Zhijie></p>
+            <p id="Introtext"> De maker van dit kunstwerk heet Dan Perjovschi </p>
             <h2> Waarom dit bij mij past</h2>
-            <p> Ik vind chinese cultuur heel mooi en leer hier veel over in mijn vrije tijd.</p>
+            <p id="Introtext"> Ik was vroeger ook erg bang en werd veel gepest daarom past het poppetje bij mij omdat ik mij altijd verschool van de pesters.</p>
         </div>
 
-        <img src="Img/Painting 1.jpg" id="Draak">
+        <img src="Img/Interieur Van abbe.jpg" id="Fear">
     </div>
 </body>
 
